--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -1,8 +1,8 @@
 {
-  "users": "Users",
   "amountHasToBePositive": "Amount must be positive",
   "button": {
-    "createUser": "Create user"
+    "createUser": "Create user",
+    "cancel": "Cancel"
   },
   "fluff": {
     "whatIsThis": {
@@ -11,7 +11,7 @@
     }
   },
   "header": {
-    "user": "User: {username}"
+    "user": "Users"
   },
   "no": "No",
   "showAllTransactions": "view all",
@@ -19,10 +19,10 @@
     "charge": "Top up your account",
     "createUser": "Create user",
     "delete": "Delete user",
-    "last10Transactions": "Last 10 transactions",
     "pay": "What you have to pay",
     "transfer": "Transfer to other users",
-    "users": "Users"
+    "users": "Users",
+    "last5Transactions": "Last 5 transactions"
   },
   "title": {
     "user": "Tally - User - {username}",
@@ -33,7 +33,10 @@
     "createdAt": "Created at",
     "fromUser": "From",
     "id": "ID",
-    "toUser": "To"
+    "toUser": "To",
+    "fromNull": "Deposited",
+    "send": "Who does \"{username}\" want to send {amount} to?",
+    "toNull": "Paid"
   },
   "user": {
     "404": "404: No user found",
@@ -55,7 +58,12 @@
     "transfer": {
       "actionMessage": "Transferred",
       "askForValue": "How much do you want to transfer?"
-    }
+    },
+    "header": "User: {username}"
   },
-  "yes": "Yes"
+  "yes": "Yes",
+  "users": {
+    "noUsers": "There don't seem to be any users.",
+    "noUsersDescription": "You can create a user with the button."
+  }
 }
